slice desktop feed

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -30,10 +30,15 @@ $hover_danger: #e84c57;
 $background_danger: #e84c57;
 $background_white: #ffffff;
 $background_body: #EDF5F8;
+$background_green_light: #bcdccc;
 
 // text
 $text_white: #ffffff;
 $text_danger: #e84c57;
+$text_dark: #030F09;
+$text_grey: #606060;
+$text_green: #30BE76;
 
 // border
 $border_danger: #e84c57;
+
