--- a/src/styles/custom/_custom-wrap.scss
+++ b/src/styles/custom/_custom-wrap.scss
@@ -26,3 +26,12 @@
     -moz-box-shadow: 0px 0px 15px 0px rgba(50, 50, 50, 0.29);
     box-shadow: 0px 0px 15px 0px rgba(50, 50, 50, 0.29);
 }
+
+.wrap {
+    width: 100%;
+}
+
+.wrap-main {
+    width: 100%;
+    padding: 0 3rem;
+}
