--- a/src/styles/layout/_logo.scss
+++ b/src/styles/layout/_logo.scss
@@ -49,3 +49,52 @@
         }
     }
 }
+
+.logo-small {
+    display: flex;
+    flex-direction: row;
+    width: 150px;
+    height: 40px;
+
+    &__avatar {
+        width: 35%;
+        height: 100%;
+        display: flex;
+        flex-direction: row;
+        position: relative;
+
+        &__left,
+        &__right {
+            width: 40px;
+            height: 20px;
+            position: absolute;
+            transform: rotate(125deg);
+        }
+
+        &__right {
+            background: $dot_colot;
+            border-radius: 30px 30px 0 0;
+            bottom: 9px;
+            right: -2px;
+        }
+
+        &__left {
+            background: $dot_color_yellow;
+            border-radius: 0 0 30px 30px;
+            top: -10px;
+        }
+    }
+
+    &__text {
+        width: 65%;
+
+        & p {
+            font-family: Helvetica;
+            font-size: 20px;
+            color: #363837;
+            letter-spacing: 0.4px;
+            line-height: 20px;
+            font-weight: 600;
+        }
+    }
+}
