--- a/src/views/layouts/styles.html
+++ b/src/views/layouts/styles.html
@@ -4,6 +4,7 @@
 <link rel="stylesheet" type="text/css" media="screen" href="node_modules/slick-carousel/slick/slick-theme.css" />
 <link rel="stylesheet" type="text/css" media="screen" href="node_modules/lightgallery/dist/css/lightgallery.min.css" />
 <link rel="stylesheet" type="text/css" media="screen" href="node_modules/mmenu-js/dist/mmenu.css" />
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <!-- endbuild -->
 <!-- build:css(.tmp) styles/style.min.css -->
 <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
