--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -30,6 +30,8 @@
 @import 'layout/boxAccount';
 @import 'layout/dskCard';
 @import 'layout/cardAuthor';
+@import 'layout/cardRecipes';
+@import 'layout/cardFood';
 
 // ----------------------------------------------------------------------
 // Custom
@@ -44,6 +46,7 @@
 @import 'pages/homepage';
 @import 'pages/auth';
 @import 'pages/desktop';
+@import 'pages/profile';
 // ----------------------------------------------------------------------
 // Responsive
 // ----------------------------------------------------------------------
