--- a/src/styles/custom/_custom-wrap.scss
+++ b/src/styles/custom/_custom-wrap.scss
@@ -35,3 +35,13 @@
     width: 100%;
     padding: 0 3rem;
 }
+
+.wrap-profile-bgImg {
+    width: 100%;
+    background-image: url("/images/photo-1478144592103-25e218a04891.jpeg");
+    background-size: cover;
+}
+.wrap-profile-bgBlur {
+    width: 100%;
+    background-image: linear-gradient(180deg, rgba(255,255,255,0.80) 0%, #F7F8FA 100%);
+}
