--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -39,6 +39,7 @@
 @import 'custom/custom-plugin';
 @import 'custom/custom-wrap';
 @import 'custom/custom-text';
+@import 'custom/custom-cls';
 
 // ----------------------------------------------------------------------
 // Pages
