--- a/src/views/layouts/dskCard.html
+++ b/src/views/layouts/dskCard.html
@@ -24,17 +24,17 @@
         <span>.</span>
         <p>@@foodComment comments</p>
       </div>
-        <button class="food-btn" id="@@btnId" >
+        <button class="food-btn" >
           <span>+</span>
           <span>Save</span>
         </button>
     </div>
   </div>
-  <div class="dsk-modal" id="@@clsDsk">
+  <div class="dsk-modal" >
     <div class="modal-content">
       <div class="modal-title">
         <p class="til title-dark">Save to</p>
-        <span class="title-grey" id="@@dskClose">X</span>
+        <span class="title-grey dsk-close">X</span>
       </div>
       <p class="modal-item title-light">Western</p>
       <p class="modal-item title-light">Quick Lunch</p>
