--- a/src/views/pages/desktopFeed.html
+++ b/src/views/pages/desktopFeed.html
@@ -35,11 +35,11 @@
               </div>
               <div class="desktop-two-item-main">
                 @@include('../layouts/dskCard.html', {
-                  "nameCard": "Profile Name","dskClose": "cl-one","clsDsk": "cls-one","timeCreate": "2h", "btnId": "btn-one","avatarCard":"https://images.unsplash.com/profile-fb-1467003450-2d723f096cb1.jpg?dpr=2&auto=format&fit=crop&w=150&h=150&q=60&crop=faces&bg=fff",
+                  "nameCard": "Profile Name","timeCreate": "2h","avatarCard":"https://images.unsplash.com/profile-fb-1467003450-2d723f096cb1.jpg?dpr=2&auto=format&fit=crop&w=150&h=150&q=60&crop=faces&bg=fff",
                   "foodName":"Tofu Salad Ginger Garlic", "foodDesc": "I thought this salad was exceptionally delicious and healthy. I recommend pressing the ...", "foodLike": "32", "foodComment": "8", "foodImage": "/images/Potato Recipes/food one.jpg"})
                 
                 @@include('../layouts/dskCard.html', {
-                  "nameCard": "Profile Name","dskClose": "cl-two","clsDsk": "cls-two","btnId": "btn-two","timeCreate": "2h","avatarCard":"https://images.unsplash.com/profile-fb-1467003450-2d723f096cb1.jpg?dpr=2&auto=format&fit=crop&w=150&h=150&q=60&crop=faces&bg=fff",
+                  "nameCard": "Profile Name","timeCreate": "2h","avatarCard":"https://images.unsplash.com/profile-fb-1467003450-2d723f096cb1.jpg?dpr=2&auto=format&fit=crop&w=150&h=150&q=60&crop=faces&bg=fff",
                   "foodName":"Tofu Salad Ginger Garlic", "foodDesc": "I thought this salad was exceptionally delicious and healthy. I recommend pressing the ...", "foodLike": "32", "foodComment": "8", "foodImage": "/images/Potato Recipes/food one.jpg"})
                 <hr class="dsk-line">
                 <div class="item-main-follow">
@@ -55,7 +55,7 @@
                 </div>
                 <hr>
                 @@include('../layouts/dskCard.html', {
-                  "nameCard": "Profile Name","dskClose": "cl-three","clsDsk": "cls-three","btnId": "btn-three","timeCreate": "2h","avatarCard":"https://images.unsplash.com/profile-fb-1467003450-2d723f096cb1.jpg?dpr=2&auto=format&fit=crop&w=150&h=150&q=60&crop=faces&bg=fff",
+                  "nameCard": "Profile Name","timeCreate": "2h","avatarCard":"https://images.unsplash.com/profile-fb-1467003450-2d723f096cb1.jpg?dpr=2&auto=format&fit=crop&w=150&h=150&q=60&crop=faces&bg=fff",
                   "foodName":"Tofu Salad Ginger Garlic", "foodDesc": "I thought this salad was exceptionally delicious and healthy. I recommend pressing the ...", "foodLike": "32", "foodComment": "8", "foodImage": "/images/Potato Recipes/food one.jpg"})
                 
                 </div>
