--- a/src/styles/layout/_cardFood.scss
+++ b/src/styles/layout/_cardFood.scss
@@ -1,5 +1,6 @@
 .card-food {
   border-radius: 8px;
+  box-shadow: 0px 0px 13px 0px rgba(50, 50, 50, 0.39);
 }
 .food-img {
   width: 100%;
@@ -9,12 +10,14 @@
     width: 100%;
     height: 100%;
     background-size: cover;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
   }
 }
 
 .food-details {
   width: 100%;
-  padding: 0 1.5rem;
+  padding: 0 1.5rem 1.5rem 1.5rem
 }
 .foodName {
   padding: 1rem 0;
