--- a/src/styles/layout/_cardRecipes.scss
+++ b/src/styles/layout/_cardRecipes.scss
@@ -1,10 +1,22 @@
 .recipes {
-  width: 100%;
-  height: 105px;
-  display: flex;
+  height: 180px;
   flex-direction: column;
   border-radius: 8px;
+  padding: 1px;
   cursor: pointer;
+  position: relative;
+
+  &:hover > .re-modal {
+    background: none;
+  }
+}
+.re-modal {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #f4f4f485;
 }
 
 .recipes-img {
@@ -14,7 +26,7 @@
   & img {
     width: 100%;
     height: 100%;
-    background-size: cover;
+    object-fit: cover;
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
   }
@@ -33,5 +45,13 @@
   & p {
     font-size: 1rem;
     text-align: center;
+  }
+}
+
+.recipes-around {
+  border: 2px solid $text_green;
+
+  & .re-modal {
+    background: none;
   }
 }
