--- a/src/views/pages/myProfile.html
+++ b/src/views/pages/myProfile.html
@@ -49,7 +49,7 @@
                     <p class="head-title title-dark">My Recipes</p>
                     <button class="head-btn text-button">+ Add New</button>
                   </div>
-                  <div class="pl-slice">
+                  <div class="pl-slice d-flex fl-row">
                     @@include('../layouts/cardRecipes.html', {"foodName": "Western (8)","foodUrl":"/images/Recipe Book/photo-1541696432-82c6da8ce7bf.jpeg"})
                     @@include('../layouts/cardRecipes.html', {"foodName": "Italian (2)","foodUrl":"/images/Recipe Book/photo-1544926206-bd2c1e248045.jpeg"})
                     @@include('../layouts/cardRecipes.html', {"foodName": "Desserts (3)","foodUrl":"/images/Recipe Book/photo-1546077500-45f1ac492543.jpeg"})
