slice other profile

--- a/src/styles/custom/_custom-wrap.scss
+++ b/src/styles/custom/_custom-wrap.scss
@@ -39,7 +39,7 @@
 .wrap-profile-bgImg {
     width: 100%;
     background-image: url("/images/photo-1478144592103-25e218a04891.jpeg");
-    background-size: cover;
+    background-repeat: repeat;
 }
 .wrap-profile-bgBlur {
     width: 100%;
