--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -32,6 +32,7 @@
 @import 'layout/cardAuthor';
 @import 'layout/cardRecipes';
 @import 'layout/cardFood';
+@import 'layout/otherAccount';
 
 // ----------------------------------------------------------------------
 // Custom
@@ -48,6 +49,7 @@
 @import 'pages/auth';
 @import 'pages/desktop';
 @import 'pages/profile';
+@import 'pages/otherProfile';
 // ----------------------------------------------------------------------
 // Responsive
 // ----------------------------------------------------------------------
