--- a/src/views/pages/myProfile.html
+++ b/src/views/pages/myProfile.html
@@ -50,20 +50,20 @@
                     <button class="head-btn text-button">+ Add New</button>
                   </div>
                   <div class="pl-slice d-flex fl-row">
-                    @@include('../layouts/cardRecipes.html', {"foodName": "Western (8)","foodUrl":"/images/Recipe Book/photo-1541696432-82c6da8ce7bf.jpeg"})
-                    @@include('../layouts/cardRecipes.html', {"foodName": "Italian (2)","foodUrl":"/images/Recipe Book/photo-1544926206-bd2c1e248045.jpeg"})
-                    @@include('../layouts/cardRecipes.html', {"foodName": "Desserts (3)","foodUrl":"/images/Recipe Book/photo-1546077500-45f1ac492543.jpeg"})
-                    @@include('../layouts/cardRecipes.html', {"foodName": "Soups (4)","foodUrl":"/images/Recipe Book/photo-1455853659719-4b521eebc76d.jpeg"})
-                    @@include('../layouts/cardRecipes.html', {"foodName": "Pasta (1)","foodUrl":"/images/Recipe Book/photo-1512398975429-6ec18e1f3eb4.jpeg"})
-                    @@include('../layouts/cardRecipes.html', {"foodName": "Western (8)","foodUrl":"/images/Recipe Book/photo-1512398975429-6ec18e1f3eb4.jpeg"})
+                    @@include('../layouts/cardRecipes.html', {"foodName": "Western (8)","foodUrl":"/images/Recipe Book/recipes-1.jpg"})
+                    @@include('../layouts/cardRecipes.html', {"foodName": "Italian (2)","foodUrl":"/images/Recipe Book/recipes-2.jpg"})
+                    @@include('../layouts/cardRecipes.html', {"foodName": "Desserts (3)","foodUrl":"/images/Recipe Book/recipes-3.jpg"})
+                    @@include('../layouts/cardRecipes.html', {"foodName": "Soups (4)","foodUrl":"/images/Recipe Book/recipes-4.jpg"})
+                    @@include('../layouts/cardRecipes.html', {"foodName": "Pasta (1)","foodUrl":"/images/Recipe Book/recipes-5.jpeg"})
+                    @@include('../layouts/cardRecipes.html', {"foodName": "Western (8)","foodUrl":"/images/Recipe Book/recipes-6.jpg"})
                   </div>
                 </div>
                 <div class="pl-down">
-                  @@include('../layouts/cardFood.html', {"foodTime":"5","foodIngre":"4","foodName": "Cooked Coconut Mussels","foodImg":"/images/Recipe Book/photo-1512398975429-6ec18e1f3eb4.jpeg"})
-                  @@include('../layouts/cardFood.html', {"foodTime":"5","foodIngre":"4","foodName": "Grilled Black Pepper Prawns","foodImg":"/images/Recipe Book/photo-1512398975429-6ec18e1f3eb4.jpeg"})
-                  @@include('../layouts/cardFood.html', {"foodTime":"5","foodIngre":"4","foodName": "Smoked Carrots & Ginger Mammoth","foodImg":"/images/Recipe Book/photo-1512398975429-6ec18e1f3eb4.jpeg"})
-                  @@include('../layouts/cardFood.html', {"foodTime":"5","foodIngre":"4","foodName": "Shallow-Fried Peppermint Frog","foodImg":"/images/Recipe Book/photo-1512398975429-6ec18e1f3eb4.jpeg"})
-                  @@include('../layouts/cardFood.html', {"foodTime":"5","foodIngre":"4","foodName": "Shallow-Fried Peppermint Frog","foodImg":"/images/Recipe Book/photo-1512398975429-6ec18e1f3eb4.jpeg"})
+                  @@include('../layouts/cardFood.html', {"foodTime":"5","foodIngre":"4","foodName": "Cooked Coconut Mussels","foodImg":"/images/Recipe Book/recipes-7.jpg"})
+                  @@include('../layouts/cardFood.html', {"foodTime":"5","foodIngre":"4","foodName": "Grilled Black Pepper Prawns","foodImg":"/images/Recipe Book/recipes-8.jpg"})
+                  @@include('../layouts/cardFood.html', {"foodTime":"5","foodIngre":"4","foodName": "Smoked Carrots & Ginger Mammoth","foodImg":"/images/Recipe Book/recipes-9.jpg"})
+                  @@include('../layouts/cardFood.html', {"foodTime":"5","foodIngre":"4","foodName": "Shallow-Fried Peppermint Frog","foodImg":"/images/Recipe Book/recipes-10.jpg"})
+                  @@include('../layouts/cardFood.html', {"foodTime":"5","foodIngre":"4","foodName": "Shallow-Fried Peppermint Frog","foodImg":"/images/Recipe Book/recipes-11.jpg"})
                 </div>
               </div>
 
