--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -38,6 +38,7 @@ $text_danger: #e84c57;
 $text_dark: #030F09;
 $text_grey: #606060;
 $text_green: #30BE76;
+$text_grey_grey: #E6E6E6;
 
 // border
 $border_danger: #e84c57;
