--- a/src/views/pages/desktopFeed.html
+++ b/src/views/pages/desktopFeed.html
@@ -36,11 +36,11 @@
               <div class="desktop-two-item-main">
                 @@include('../layouts/dskCard.html', {
                   "nameCard": "Profile Name","timeCreate": "2h","avatarCard":"https://images.unsplash.com/profile-fb-1467003450-2d723f096cb1.jpg?dpr=2&auto=format&fit=crop&w=150&h=150&q=60&crop=faces&bg=fff",
-                  "foodName":"Tofu Salad Ginger Garlic", "foodDesc": "I thought this salad was exceptionally delicious and healthy. I recommend pressing the ...", "foodLike": "32", "foodComment": "8", "foodImage": "/images/Potato Recipes/food one.jpg"})
+                  "foodName":"Tofu Salad Ginger Garlic", "foodDesc": "I thought this salad was exceptionally delicious and healthy. I recommend pressing the ...", "foodLike": "32", "foodComment": "8", "foodImage": "/images/Potato Recipes/potato-1.jpg"})
                 
                 @@include('../layouts/dskCard.html', {
                   "nameCard": "Profile Name","timeCreate": "2h","avatarCard":"https://images.unsplash.com/profile-fb-1467003450-2d723f096cb1.jpg?dpr=2&auto=format&fit=crop&w=150&h=150&q=60&crop=faces&bg=fff",
-                  "foodName":"Tofu Salad Ginger Garlic", "foodDesc": "I thought this salad was exceptionally delicious and healthy. I recommend pressing the ...", "foodLike": "32", "foodComment": "8", "foodImage": "/images/Potato Recipes/food one.jpg"})
+                  "foodName":"Tofu Salad Ginger Garlic", "foodDesc": "I thought this salad was exceptionally delicious and healthy. I recommend pressing the ...", "foodLike": "32", "foodComment": "8", "foodImage": "/images/Potato Recipes/potato-2.jpg"})
                 <hr class="dsk-line">
                 <div class="item-main-follow">
                   <div class="follow-title">
@@ -56,7 +56,7 @@
                 <hr>
                 @@include('../layouts/dskCard.html', {
                   "nameCard": "Profile Name","timeCreate": "2h","avatarCard":"https://images.unsplash.com/profile-fb-1467003450-2d723f096cb1.jpg?dpr=2&auto=format&fit=crop&w=150&h=150&q=60&crop=faces&bg=fff",
-                  "foodName":"Tofu Salad Ginger Garlic", "foodDesc": "I thought this salad was exceptionally delicious and healthy. I recommend pressing the ...", "foodLike": "32", "foodComment": "8", "foodImage": "/images/Potato Recipes/food one.jpg"})
+                  "foodName":"Tofu Salad Ginger Garlic", "foodDesc": "I thought this salad was exceptionally delicious and healthy. I recommend pressing the ...", "foodLike": "32", "foodComment": "8", "foodImage": "/images/Potato Recipes/potato-3.jpg"})
                 
                 </div>
             </div>
