--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -31,6 +31,7 @@ $background_danger: #e84c57;
 $background_white: #ffffff;
 $background_body: #EDF5F8;
 $background_green_light: #bcdccc;
+$background_green: #30be76;
 
 // text
 $text_white: #ffffff;
@@ -39,6 +40,7 @@ $text_dark: #030F09;
 $text_grey: #606060;
 $text_green: #30BE76;
 $text_grey_grey: #E6E6E6;
+$text_blur: #A8A8A8;
 
 // border
 $border_danger: #e84c57;
