--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -50,6 +50,7 @@
 @import 'pages/desktop';
 @import 'pages/profile';
 @import 'pages/otherProfile';
+@import 'pages/previewRecipes';
 // ----------------------------------------------------------------------
 // Responsive
 // ----------------------------------------------------------------------
